Added github link

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,13 @@
                   <span>1736 Legodi str Vosloorus Johannesburg, South Africa</span>
                 </div>
               </div>
+               <div class="contact-item">
+        <div class="contact-icon">🐙</div>
+        <div class="contact-text">
+            <h4>GitHub</h4>
+            <a href="https://github.com/LethuSithole" target="_blank">github.com/LethuSithole</a>
+        </div>
+    </div>
 
               <div class="contact-item">
                 <div class="contact-icon">💼</div>
