--- a/skills.html
+++ b/skills.html
@@ -41,26 +41,63 @@
       <section class="skills-section">
         <h2>My Skills</h2>
         <div class="skills-container">
-          <div class="skill-category">
+          <!-- Programming Languages Section -->
+          <div class="skills-category">
             <h3>Programming Languages</h3>
-            <div class="skills-grid">
-              <div class="skill-item">
-                <div class="skill-icon">🐍</div>
-                <span class="skill-name">Python</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" data-percent="90"></div>
+            <div class="languages-grid">
+              <div class="language-item" data-level="expert">
+                <div class="language-icon">🟨</div>
+                <div class="language-name">JavaScript</div>
+                <div class="language-percentage">
+                  <span>Proficiency</span>
+                  <span class="percentage-number">90%</span>
                 </div>
-              </div>
-              <div class="skill-item">
-                <div class="skill-icon">☕</div>
-                <span class="skill-name">JavaScript</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" data-percent="85"></div>
+                <div class="language-progress">
+                  <div class="language-progress-bar" style="width: 90%"></div>
                 </div>
+                <div class="language-proficiency">Expert</div>
               </div>
-            </div>
-          </div>
 
+              <div class="language-item" data-level="advanced">
+                <div class="language-icon">🐍</div>
+                <div class="language-name">Python</div>
+                <div class="language-percentage">
+                  <span>Proficiency</span>
+                  <span class="percentage-number">75%</span>
+                </div>
+                <div class="language-progress">
+                  <div class="language-progress-bar" style="width: 75%"></div>
+                </div>
+                <div class="language-proficiency">Advanced</div>
+              </div>
+
+              <div class="language-item" data-level="expert">
+                <div class="language-icon">🌐</div>
+                <div class="language-name">HTML</div>
+                <div class="language-percentage">
+                  <span>Proficiency</span>
+                  <span class="percentage-number">95%</span>
+                </div>
+                <div class="language-progress">
+                  <div class="language-progress-bar" style="width: 95%"></div>
+                </div>
+                <div class="language-proficiency">Expert</div>
+              </div>
+
+              <div class="language-item" data-level="expert">
+                <div class="language-icon">🎨</div>
+                <div class="language-name">CSS</div>
+                <div class="language-percentage">
+                  <span>Proficiency</span>
+                  <span class="percentage-number">90%</span>
+                </div>
+                <div class="language-progress">
+                  <div class="language-progress-bar" style="width: 90%"></div>
+                </div>
+                <div class="language-proficiency">Expert</div>
+              </div>
+
+            
           <div class="skill-category">
             <h3>Frontend Technologies</h3>
             <div class="skills-grid">
